<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/ToolbarTheme">


    <item
        android:id="@+id/nav_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.widget.SearchView"
        />

    <item
        android:id="@+id/nav_upload"
        android:title="@string/upload"
        app:showAsAction="always"
        android:icon="@drawable/ic_cloud_upload_black_24dp"
        />

    <item
        android:id="@+id/nav_info"
        android:title="@string/info"
        app:showAsAction="never"
        />


</menu>